--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@advanced-rest-client/arc-cookies",
   "description": "A module that contains all UI and logic that adds support for cookie manipulation in Advanced REST Client",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
-  "authors": [
-    "Pawel Psztyc"
+  "author": {
+    "name": "Pawel Uchida-Psztyc",
+    "email": "arc@mulesoft.com"
+  },
+  "contributors": [
+    "Your name can be here!"
   ],
-  "contributors": [],
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/arc-cookies.git"
@@ -21,46 +24,44 @@
     "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
     "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
     "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch --playwright --browsers chromium",
     "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
   },
   "dependencies": {
     "@advanced-rest-client/arc-events": "^0.2.10",
-    "@advanced-rest-client/arc-icons": "^3.1.0",
-    "@advanced-rest-client/arc-ie": "^1.0.2",
-    "@advanced-rest-client/arc-resizable-mixin": "^1.1.0",
-    "@advanced-rest-client/arc-types": "^0.2.33",
-    "@advanced-rest-client/bottom-sheet": "^3.2.2",
-    "@anypoint-web-components/anypoint-button": "^1.1.1",
-    "@anypoint-web-components/anypoint-checkbox": "^1.1.2",
-    "@anypoint-web-components/anypoint-dialog": "^0.1.3",
-    "@anypoint-web-components/anypoint-input": "^0.2.18",
-    "@anypoint-web-components/anypoint-item": "^1.0.7",
+    "@advanced-rest-client/arc-icons": "^3.3.3",
+    "@advanced-rest-client/arc-models": "^5.1.0",
+    "@advanced-rest-client/arc-resizable-mixin": "^1.2.1",
+    "@advanced-rest-client/arc-types": "^0.2.50",
+    "@advanced-rest-client/bottom-sheet": "^3.2.3",
+    "@anypoint-web-components/anypoint-button": "^1.2.1",
+    "@anypoint-web-components/anypoint-checkbox": "^1.2.1",
+    "@anypoint-web-components/anypoint-dialog": "^0.1.9",
+    "@anypoint-web-components/anypoint-input": "^0.2.25",
+    "@anypoint-web-components/anypoint-item": "^1.1.2",
     "@anypoint-web-components/anypoint-selector": "^1.1.7",
-    "@github/time-elements": "^3.1.1",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "@github/time-elements": "^3.1.2",
+    "lit-element": "^2.5.1",
+    "lit-html": "^1.4.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-data-generator": "^3.1.4",
-    "@advanced-rest-client/arc-demo-helper": "^2.2.2",
-    "@anypoint-web-components/anypoint-radio-button": "^0.1.5",
-    "@open-wc/eslint-config": "^4.0.1",
-    "@open-wc/testing": "^2.5.32",
-    "@web/dev-server": "^0.1.7",
-    "@web/test-runner": "^0.12.15",
-    "@web/test-runner-playwright": "^0.8.4",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "husky": "^4.3.5",
-    "lint-staged": "^10.5.3",
-    "sinon": "^9.2.2",
-    "typescript": "^4.1.3",
+    "@advanced-rest-client/arc-data-generator": "^3.2.0",
+    "@advanced-rest-client/arc-demo-helper": "^3.0.0",
+    "@anypoint-web-components/anypoint-radio-button": "^0.1.7",
+    "@open-wc/eslint-config": "^4.3.0",
+    "@open-wc/testing": "^2.5.33",
+    "@web/dev-server": "^0.1.17",
+    "@web/test-runner": "^0.13.5",
+    "@web/test-runner-playwright": "^0.8.6",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "sinon": "^11.1.1",
+    "typescript": "^4.3.2",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "eslintConfig": {
